trunk/Archive2/2a/255271b3f9a0ce/output
main.cpp: In function 'int main()':
main.cpp:26:23: error: cannot convert 'Point' to 'int' for argument '1' to 'int inc_and_add(int, int)'
  cout << inc_and_add(p) << endl;
                       ^
